--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -73,6 +73,7 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 * Hungarian: {{t+|hu|borz}}
 * Icelandic: {{t|is|greifingi|m}}
 * Ido: {{t+|io|daxo}}
+* Indonesian: {{t|id|biul}}
 * Interlingua: {{t|ia|taxon}}
 * Irish: {{t+|ga|broc|m}}
 * Italian: {{t+|it|tasso|m}}
