--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -106,6 +106,7 @@ From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{et
 * German: {{t+|de|Kaninchen|n}}, {{t+|de|Karnickel|n}} {{qualifier|colloquial}}, {{t|de|Schlappohr|n}} {{qualifier|humorous}}
 * Greek: {{t+|el|κουνέλι|n}}
 *: Ancient: {{t|grc|κούνικλος|m}}
+* Greenlandic: {{t-needed|kl}}
 * Gujarati: {{t|gu|સસલું|tr=sasluṃ}}
 * Hebrew: {{t+|he|אַרְנָב|m|tr=arnáv}}, {{t+|he|אַרְנֶבֶת|f|tr=arnévet}}
 * Hindi: {{t|hi|ख़रगोश|m|sc=Deva}}, {{t+|hi|शशक|m|sc=Deva}}, {{t|hi|सुस्सा|tr=sussA|sc=Deva}}, {{t+|hi|खरहा|tr=kharhaa|sc=Deva}}
