--- a/en/b/BFD.746587.wikitext
+++ b/en/b/BFD.746587.wikitext
@@ -3,7 +3,4 @@
 ===Interjection===
 {{en-interj}}
 
-# {{lb|en|idiomatic|humorous}} [[big deal]]. ''(initialism for [[big]] [[fucking]] [[deal]])''
-
-===References===
-* "The name of the [[w:Binary File Descriptor|Binary File Descriptor library]] came from a conversation David Wallace was having with Richard Stallman about the library: RMS said that it would be quite hard--David said 'BFD'." [http://www.gnu.org/software/binutils/manual/bfd-2.9.1/html_mono/bfd.html#SEC2]{{broken ref}}
+# {{lb|en|especially|humorous}} A [[big deal]]: {{initialism of|[[big]] [[fucking]] [[deal]]|lang=en}}
