--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -205,7 +205,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Thai: {{t+|th|สิ่ง}}
 * Tibetan: {{t|bo|ཅ་ལག}}, {{t|bo|དངོས་པོ}}
 * Tupinambá: {{t|tpn|mba'e}}
-* Turkish: {{t+|tr|şey}}, {{t+|tr|nesne}}, {{t+|tr|nen}}
+* Turkish: {{t+|tr|şey}}, {{t+|tr|nesne}}
 * Turkmen: {{t+|tk|zat}}
 * Udmurt: {{t|udm|арбери}}
 * Ukrainian: {{t|uk|річ|f|sc=Cyrl}}
