--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -221,7 +221,7 @@ From {{inh|ja|ojp|-|sort=つき}}.  Likely a shift from ''tsuku'' above, derived
 # {{lb|ja|tarot}}: the {{l|en|moon|Moon}}, the eighteenth {{l|en|trump}} or {{l|en|major arcana}} {{l|en|card}} in most traditional Tarot decks
 
 =====Synonyms=====
-* {{sense|the moon}} {{ja-r|太陰|たいいん}}, [[⚏]], {{l|ja|ムーン}}
+* {{sense|the moon}} {{ja-r|太陰|たいいん}}, {{l|ja|ムーン}}
 
 =====Derived terms=====
 {{der-top}}
