--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -24,7 +24,7 @@ From {{etyl|la|en}} {{m|la|qua||in the capacity of}}.
 #* '''2005''': Ulfelder, Jay.Collective Action and the Breakdown of Authoritarian Regimes. International Political Science Review, 26(3), p318. Retrieved 1615 240810 from http://www.jstor.org/stable/pdfplus/30039035.pdf?acceptTC=true.
 #*: "In essence, military regimes are autocracies in which the military '''''qua''''' organization performs many of the functions performed by the ruling party in single-party regimes."
 #* '''2009''': Ken Levy, [http://papers.ssrn.com/sol3/papers.cfm?abstract_id=1404387 ''Killing, Letting Die, and the Case for Mildly Punishing Bad Samaritanism''], Georgia Law Review, p. 24.
-#*: Blame '''''qua''''' attitude is the feeling or belief that an individual has committed a wrongdoing, usually a wrongful action and/or harm, and can be reasonably expected not to have committed this wrongdoing. Blame qua practice is the public expression of this attitude – usually by means of censure (written or verbal criticism) or punishment. Generally, the morally worse the wrongdoing, the more severe the censure/punishment.
+#*: Blame '''''qua''''' attitude is the feeling or belief that an individual has committed a wrongdoing, usually a wrongful action and/or harm, and can be reasonably expected not to have committed this wrongdoing. Blame '''qua''' practice is the public expression of this attitude – usually by means of censure (written or verbal criticism) or punishment. Generally, the morally worse the wrongdoing, the more severe the censure/punishment.
 
 =====Translations=====
 {{trans-top|in the capacity of}}
