--- a/en/f/forty-ninth parallel.776643.wikitext
+++ b/en/f/forty-ninth parallel.776643.wikitext
@@ -4,7 +4,7 @@
 ===Noun===
 {{en-noun|head=[[forty]]-[[ninth]] [[parallel]]|-}}
 
-# {{lb|en|Canada|US}} A [[nickname]] for the approximately 1200-[[mile]] (1900-[[kilometer]]) portion of the [[border]] between [[Canada]] and the [[USA]], extending along the forty-ninth parallel of [[latitude]] from Lake of the Woods to the [[Pacific Ocean]].
+# {{lb|en|Canada|US}} A [[nickname]] for the approximately 1200-[[mile]] (1900-[[kilometer]]) portion of the [[border]] between [[Canada]] and the [[USA]], extending along the forty-ninth parallel of [[latitude]] from {{w|Lake of the Woods}} to the [[Pacific Ocean]].
 # {{lb|en|Canada|US|nonstandard}} A [[nickname]] for the entire border between Canada and the USA.
 
 ====Translations====
