--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -224,11 +224,12 @@ From {{der|nn|la|domina}}, via {{bor|nn|fro|dame}} and late {{inh|nn|non|damma}}
 {{nn-noun-f2}}
 
 # a {{l|en|lady}}, {{l|en|woman}}
-# {{qualifier|card games}} a {{l|en|queen}}
+# {{q|card games}} a {{l|en|queen}}
 
 ====Derived terms====
 * {{l|nn|dametoalett}}
 * {{l|nn|dameundertøy}}
+* {{l|nn|hoffdame}}
 
 ===References===
 * {{R:The Nynorsk Dictionary}}
