--- a/en/u/ulterior motive.802595.wikitext
+++ b/en/u/ulterior motive.802595.wikitext
@@ -29,6 +29,7 @@
 * German: {{t+|de|Hintergedanke|m}}
 * Greek: {{t+|el|υστεροβουλία|f}}
 * Hungarian: {{t|hu|hátsó szándék}}
+* Irish: {{t|ga|aidhm fholaigh|f}}
 {{trans-mid}}
 * Japanese: {{t|ja|下心|tr=したごころ, shitagokoro|sc=Jpan}}, {{t|ja|他心|tr=たしん, tashin|sc=Jpan}}, {{t|ja|他意|tr=たい, tai|sc=Jpan}}
 * Korean: {{t|ko|배후목적|tr=baehu mokjeog|sc=Kore}}
