--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -20,8 +20,7 @@ From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{et
 
 # A [[mammal]] of the family [[Leporidae]], with long ears, long [[hind leg]]s and a short, [[fluffy]] tail.
 #: {{ux|en|The pioneers survived by eating the small game they could get: '''rabbits''', squirrels and occasionally a raccoon.}}
-#* {{RQ:RJfrs AmtrPqr|II|071}}
-#*: Orion hit a '''rabbit''' once; but though sore wounded it got to the bury, and, struggling in, the arrow caught the side of the hole and was drawn out. Indeed, a nail filed sharp is not of much avail as an arrowhead; you must have it barbed, and that was a little beyond our skill.
+#* {{RQ:Jefferies Amateur Poacher|chapter=The Old Punt: A Curious ‘Turnpike’|pages=19–20|pageref=19|passage=Orion hit a '''rabbit''' once; but though sore wounded it got to the bury, and, struggling in, the arrow caught the side of the hole and was drawn out. Indeed, a nail filed sharp is not of much avail as an arrowhead; you must have it barbed, and that was a little beyond our skill.}}
 # The [[fur]] of a rabbit typically used to imitate another [[animal]]'s fur.
 # A [[runner]] in a [[distance]] [[race]] whose goal is mainly to set the [[pace]], either to [[tire]] a specific [[rival]] so that a [[teammate]] can win or to help another break a [[record]]; a [[pacesetter]].
 # {{lb|en|cricket}} A very poor [[batsman]]; selected as a [[bowler]] or [[wicket-keeper]].
