--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -96,48 +96,48 @@ From {{etyl|enm|en}} {{m|enm|blowen}}, from {{etyl|ang|en}} {{m|ang|blāwan||to 
 #: ''That girl has a wonderful voice; just listen to her '''blow'''!''
 
 =====Derived terms=====
-{{rel-top|Terms derived from ''blow'' (verb)}}
-* {{l|en|beblow}}
-* {{l|en|blow a gasket}}
-* {{l|en|blow a kiss}}
-* {{l|en|blow apart}}
-* {{l|en|blow away}}
-* {{l|en|blow down}}
-* {{l|en|blower}}
-* {{l|en|blowhard}}
-* {{l|en|blow hot and cold}}
-* {{l|en|blowhorn}}
-* {{l|en|blow it}}
-* {{l|en|blow it out one's ass}}
-* {{l|en|blowjob}}
-* {{l|en|blow me}}
-* {{l|en|blow off}}
-* {{l|en|blow off steam}}
-* {{l|en|blow one's horn}}
-* {{l|en|blow one's nose}}
-* {{l|en|blow one's top}}
-{{rel-mid}}
-* {{l|en|blow one's trumpet}}
-* {{l|en|blow out}}
-* {{l|en|blowout}}
-* {{l|en|blow over}}
-* {{l|en|blow someone out of the water}}
-* {{l|en|blow someone's brains out}}
-* {{l|en|blow someone's cover}}
-* {{l|en|blow someone's mind}}
-* {{l|en|blow someone's socks off}}
-* {{l|en|blow the whistle}}
-* {{l|en|blow up}}
-* {{l|en|blow upon}}
-* {{l|en|blowup}}
-* {{l|en|blow up in one's face}}
-* {{l|en|blowy}}
-* {{l|en|glassblower}}
-* {{l|en|inblow}}
-* {{l|en|mind-blowing}}
-* {{l|en|outblow}}
-* {{l|en|there she blows}}
-{{rel-bottom}}
+{{der3|lang=en|title=Terms derived from ''blow'' (verb)
+| {{l|en|beblow}}
+| {{l|en|blow a gasket}}
+| {{l|en|blow a kiss}}
+| {{l|en|blow apart}}
+| {{l|en|blow away}}
+| {{l|en|blow down}}
+| {{l|en|blower}}
+| {{l|en|blowhard}}
+| {{l|en|blow hot and cold}}
+| {{l|en|blowhorn}}
+| {{l|en|blow it}}
+| {{l|en|blow it out one's ass}}
+| {{l|en|blowjob}}
+| {{l|en|blow me}}
+| {{l|en|blow off}}
+| {{l|en|blow off steam}}
+| {{l|en|blow one's horn}}
+| {{l|en|blow one's nose}}
+| {{l|en|blow one's top}}
+| {{l|en|blow one's trumpet}}
+| {{l|en|blow out}}
+| {{l|en|blowout}}
+| {{l|en|blow over}}
+| {{l|en|blow someone out of the water}}
+| {{l|en|blow someone's brains out}}
+| {{l|en|blow someone's cover}}
+| {{l|en|blow someone's mind}}
+| {{l|en|blow someone's socks off}}
+| {{l|en|blow the whistle}}
+| {{l|en|blow up}}
+| {{l|en|blow upon}}
+| {{l|en|blowup}}
+| {{l|en|blow up in one's face}}
+| {{l|en|blowy}}
+| {{l|en|glassblower}}
+| {{l|en|inblow}}
+| {{l|en|mind-blowing}}
+| {{l|en|outblow}}
+| {{l|en|suck and blow}}
+| {{l|en|there she blows}}
+}}
 
 =====Translations=====
 {{trans-top|to produce an air current}} <!--1-->
