--- a/en/m/multicolor.34078.wikitext
+++ b/en/m/multicolor.34078.wikitext
@@ -20,6 +20,12 @@ From {{etyl|la|en}} {{m|la|multicolor}}; see below.
 ====Translations====
 {{trans-see|multicolored}}
 
+===Noun===
+{{en-noun|-}}
+
+# A display of many colors.
+#: ''a stamp printed in '''multicolor'''''
+
 ----
 
 ==Latin==
