--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -17,9 +17,9 @@ Alternative (but less likely) etymology derives ''yeah'' from a drawling pronunc
 * {{rhymes|ɛə|lang=en}}
 
 ===Particle===
-{{en-adv|-}}
+{{en-part}}
 
-# {{lb|en|informal}} [[yes|Yes]].
+# {{lb|en|informal|colloquial}} [[yes|Yes]].
 
 ====Synonyms====
 * {{sense|agreement}} {{l|en|yes}}, {{l|en|yep}}, {{l|en|yup}}, {{l|en|aye}}, {{l|en|ya}}, {{l|en|yea}}, {{l|en|uh-huh}}
