--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -106,7 +106,7 @@ Cognate with Scots {{m|sco|wecht}}, {{m|sco|weicht||weight}}, Saterland Frisian 
 * Central Melanau: {{t|mel|baat}}
 * Chinese:
 *: Mandarin: {{t+|cmn|重量|tr=zhòngliàng|sc=Hani}}, {{qualifier|body weight}} {{t+|cmn|體重|sc=Hani}}, {{t+|cmn|体重|tr=tǐzhòng|sc=Hani}}
-* Czech: {{t+|cs|váha|f}}
+* Czech: {{t+|cs|tíha|f}}, {{t+|cs|váha|f}}
 * Danish: {{t|da|vægt|c}}, {{t|da|tyngdekraft|c}}
 * Dutch: {{t+|nl|gewicht}}
 * Esperanto: {{t|eo|pezo}}
@@ -148,7 +148,7 @@ Cognate with Scots {{m|sco|wecht}}, {{m|sco|weicht||weight}}, Saterland Frisian 
 *: Bokmål: {{t+|nb|vekt|m|f}}
 * Occitan: {{t+|oc|pes|m}}
 * Persian: {{t+|fa|وزن|tr=vazn|sc=fa-Arab}}
-* Polish: {{t+|pl|waga|f}}
+* Polish: {{t+|pl|ciężar|m}}, {{t+|pl|waga|f}}
 * Portuguese: {{t+|pt|peso}}
 * Romanian: {{t+|ro|greutate|f}}
 * Romansch: {{t|rm|paisa|f}}, {{t|rm|peisa|f}}, {{t|rm|pesa|f}}, {{t|rm|pais|m}}
