--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -199,7 +199,7 @@ From {{der|ms|sa|मेघ|t=cloud}}.
 ==Old Norse==
 
 ===Etymology===
-From {{inh|non|gem-pro|*meganą}}.
+From {{inh|non|gem-pro|*meganą}}, {{m|gem-pro|*maganą}}.
 
 ===Verb===
 {{non-verb}}
