--- a/en/i/in the know.742284.wikitext
+++ b/en/i/in the know.742284.wikitext
@@ -42,7 +42,7 @@
 * Portuguese: {{t+|pt|informado|m}}, {{t+|pt|atento|m}}
 * Russian: {{t+|ru|в ку́рсе}}
 * Serbo-Croatian: {{t-needed|sh}}
-* Spanish: {{t+|es|informado}}, {{t|es|al loro}} {{qualifier|colloquial}}, {{t|es|en el ajo}} {{qualifier|colloquial}}, {{t|es|al tanto}}
+* Spanish: {{t+|es|informado}}, {{t|es|al loro}} {{qualifier|colloquial}}, {{t|es|en el ajo}} {{qualifier|colloquial}}, {{t|es|al tanto}}, {{t|es|en la pomada}} {{qualifier|colloquial}}
 * Thai: {{t-needed|th}}
 * Turkish: {{t-needed|tr}}
 * Ukrainian: {{t+|uk|обізнаний|tr=obíznanyj|sc=Cyrl}}, {{t|uk|в курсі|tr=v kúrsi|sc=Cyrl}}
