--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -11,7 +11,7 @@
 From {{der|en|enm|binden}}, from {{der|en|ang|bindan}}, from {{der|en|gem-pro|*bindaną}} (compare {{cog|fy|bine}}, {{cog|nl|binden}}, {{cog|nds|binnen}}, {{cog|de|binden}}, {{cog|da|binde}}), from {{der|en|ine-pro|*bʰendʰ-||to tie}} (compare {{cog|cy|benn||cart}}, {{cog|la|offendīx||knot, band}}, {{cog|lt|beñdras||partner}}, {{cog|sq|bend||servant, henchman}}, {{cog|grc|πεῖσμα||cable, rope}}, {{cog|fa|بستن|tr=bastan|t=to bind}}, {{cog|sa|बध्नाति}}).
 
 ===Verb===
-{{en-verb|binds|binding|bound|bound|past_ptc2=bounden|past_ptc2_qual=rare}}
+{{en-verb|binds|binding|bound|bound|past_ptc2=bounden|past_ptc2_qual=archaic, rare}}
 
 # {{lb|en|intransitive}} To tie; to confine by any [[ligature]].
 #* {{rfdate}} {{w|Shakespeare}}
