--- a/en/a/antinomianism.801172.wikitext
+++ b/en/a/antinomianism.801172.wikitext
@@ -12,7 +12,7 @@ From {{suffix|antinomian|ism|lang=en}}, coined by {{w|Martin Luther}}, notably u
 ===Noun===
 {{en-noun|~}}
 
-# {{lb|en|Christianity}} A religious movement which believes that only the spiritual 'law of Faith' (Romans 3:27) is essential for salvation; and which is 'against' all other practical 'laws' being taught as being essential for salvation; and referring to them as [[legalism]].
+# {{lb|en|Christianity}} A religious movement which believes that only the spiritual 'law of Faith' (Romans 3:27) is essential for salvation; and which is against all other practical laws being taught as being essential for salvation; and referring to them as [[legalism]].
 # {{lb|en|Judaism}} Opposition to the [[Torah]].
 
 ====Antonyms====
