--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -31,7 +31,7 @@ Sense of "group of military officers that assists a commander" and similar meani
 # {{lb|en|uncountable}} A mixture of [[plaster]] and [[fibre]] used as a temporary exterior wall covering.<sup>[[w:Staff (building material)|W]]</sup>
 # A pole, stick, or wand borne as an ensign of authority; a badge of office.
 #: {{ux|en|a constable's '''staff'''}}
-#* {{w|William Shakespeare}} (1564-1616)
+#* {{rfdate|and other bibliographic particulars}} {{w|William Shakespeare}}
 #*: Methought this '''staff''', mine office badge in court, / Was broke in twain.
 #* Sir {{w|John Hayward (historian)|John Hayward}} (c.1564-1627)
 #*: All his officers brake their '''staves'''; but at their return new '''staves''' were delivered unto them.
@@ -40,7 +40,7 @@ Sense of "group of military officers that assists a commander" and similar meani
 #* Dr. J. Campbell (E. Brown's Travels)
 #*: I ascend at one [ladder] of six hundred and thirty-nine '''staves'''.
 # A series of verses so disposed that, when it is concluded, the same order begins again; a stanza; a stave.
-#* {{w|John Dryden}} (1631-1700)
+#* {{rfdate|and other bibliographic particulars}} {{w|John Dryden}}
 #*: Cowley found out that no kind of '''staff''' is proper for an heroic poem, as being all too lyrical.
 # {{lb|en|engineering}} An [[arbor]], as of a wheel or a pinion of a watch.
 # {{lb|en|surgery}} The grooved director for the gorget, or knife, used in cutting for stone in the bladder.
