--- a/en/l/leave out.741825.wikitext
+++ b/en/l/leave out.741825.wikitext
@@ -18,5 +18,8 @@
 ====Translations====
 {{trans-see|to leave out or to not include|omit}}
 
+====Synonyms====
+* {{l|en|miss out}}
+
 [[Category:English phrasal verbs]]
 [[Category:English phrasal verbs with particle (out)]]
