--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -390,6 +390,15 @@ From {{inh|fr|fro|-}}, borrowed from {{bor|fr|la|divisio|divisio, divisionem}}, 
 
 ----
 
+==Middle Englsih==
+
+===Noun===
+{{head|enm|noun}}
+
+# {{alternative form of|lang=enm|divisioun}}
+
+----
+
 ==Swedish==
 
 ===Etymology===
