--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -21,33 +21,33 @@ From {{der|en|enm|benden}}, from {{der|en|ang|bendan||to bind or bend (a bow), f
 # {{lb|en|intransitive}} To become [[curve]]d. <!--activity,accomplishment-->
 #: ''Look at the trees '''bending''' in the wind.''
 # {{lb|en|transitive}} To cause to change direction.
-#* Milton
+#* {{rfdate|and other bibliographic particulars, eg, title of work, page, url, full name of author}} {{w|John Milton}}
 #*: '''Bend''' thine ear to supplication.
-#* Shakespeare
+#* {{rfdate|and other bibliographic particulars, eg, title of work, page, url, full name of author}} {{w|William Shakespeare}}
 #*: Towards Coventry '''bend''' we our course.
-#* Sir Walter Scott
+#* {{rfdate|and other bibliographic particulars, eg, title of work, page, url, full name of author}}Sir {{w|Walter Scott}}
 #*: '''bending''' her eyes {{...}} upon her parent
 # {{lb|en|intransitive}} To change direction. <!--state,activity-->
 #: ''The road '''bends''' to the right''
 # {{lb|en|intransitive}} To be inclined; to direct itself.
-#* Milton
+#* {{rfdate|and other bibliographic particulars, eg, title of work, page, url, full name of author}} {{w|John Milton}}
 #*: to whom our vows and wishes '''bend'''
 # {{lb|en|intransitive|usually|with "down"}} To [[stoop]].
 #: ''He '''bent''' down to pick up the pieces.''
 # {{lb|en|intransitive}} To [[bow]] in prayer, or in token of submission.
-#* Coleridge
+#* {{rfdate|and other bibliographic particulars, eg, title of work, page, url, full name of author}} {{w|Samuel Taylor Coleridge}}
 #*: Each to his great Father '''bends'''.
 # {{lb|en|transitive}} To force to submit. <!--accomplishment,achievement-->
 #: ''They '''bent''' me to their will.''
-#* Shakespeare
+#* {{rfdate|and other bibliographic particulars, eg, title of work, page, url, full name of author}} {{w|William Shakespeare}}
 #*: except she '''bend''' her humour
 # {{lb|en|intransitive}} To submit.<!--state?,activity-->
 #: ''I am '''bending''' to my desire to eat junk food.''
 # {{lb|en|transitive}} To apply to a task or purpose.<!--state?,activity-->
 #: ''He '''bent''' the company's resources to gaining market share.''
-#* Temple
+#* {{rfdate|and other bibliographic particulars, eg, title of work, page, url, full name of author}} {{w|Temple}}
 #*: to '''bend''' his mind to any public business
-#* Alexander Pope
+#* {{rfdate|and other bibliographic particulars, eg, title of work, page, url, full name of author}} {{w|Alexander Pope}}
 #*: when to mischief mortals '''bend''' their will
 # {{lb|en|intransitive}} To apply oneself to a task or purpose.<!--state?,activity-->
 #: ''He '''bent''' to the goal of gaining market share.''
@@ -266,13 +266,13 @@ From {{der|en|enm|benden}}, from {{der|en|ang|bendan||to bind or bend (a bow), f
 |passage=I stumbled along through the young pines and huckleberry bushes. Pretty soon I struck into a sort of path that, I cal'lated, might lead to the road I was hunting for. It twisted and turned, and, the first thing I knew, made a sudden '''bend''' around a bunch of bayberry scrub and opened out into a big clear space like a lawn.}}
 #: {{ux|en|There's a sharp '''bend''' in the road ahead.}}
 # <!-- {{context|nautical|lang=en}} - Why nautical? --> Any of the various [[knot]]s which [[join]] the ends of two [[line]]s.<!-- or the end of a line into some other object; (the latter are called hitch) Note: In naval parlance, a knot involves splicing the strands of a rope.--> <!-- Again, why naval? It was common parlance. Methinks someone has been reading too much Hornblower! -->
-#* {{quote-book|year=2012|author=Percy W. Blandford|title=Practical Knots and Ropework|page=67|passage=A simpler version of the common '''bend''' with its ends in the same direction is used to join binder twine in a hay baling machine.}}
+#* {{quote-book|year=2012|author=Percy W. Blandford| title=Practical Knots and Ropework| page=67| passage=A simpler version of the common '''bend''' with its ends in the same direction is used to join binder twine in a hay baling machine.}}
 # {{lb|en|in the plural|medicine|diving|with ''the''}} A [[severe]] [[condition]] caused by excessively quick [[decompression]], causing bubbles of [[nitrogen]] to form in the [[blood]]; [[decompression sickness]].
 #: {{ux|en|A diver who stays deep for too long must ascend very slowly in order to prevent the '''bends'''.}}
 # {{lb|en|heraldiccharge}} One of the [[honourable]] [[ordinary|ordinaries]] formed by two [[diagonal]] [[line]]s drawn from the [[dexter chief]] to the [[sinister base]]; it generally occupies a [[fifth]] part of the [[shield]] if [[uncharged]], but if [[charged]] one [[third]].
 #* {{quote-book|year=1968|author=Charles MacKinnon of Dunakin|title=The Observer's Book of Heraldry|pages=63-64|passage=Perhaps the most celebrated coat of arms is that of Scrope, which is Azure a '''bend''' Or. This is the coat over which, from 1385 to 1390, Sir Robert le Grosvenor and Sir Richard le Scrope invoked the High Court of Chivalry to decide which of them had the right to bear these arms. Chaucer gave evidence before the court. In the end the arms were awarded to Scrope, and Grosvenor was ordered to difference with a bordure Argent. This he disdained to do, and being highly dissatisfied with the verdict he appealed to Richard II who altered the decision of the court by refusing to allow the '''bend''' to Grosvenor ''at all''! Grosvenor then adopted a garb, or sheaf of corn.}}
 # {{lb|en|obsolete}} Turn; purpose; inclination; ends.
-#* Fletcher
+#* {{rfdate|and other bibliographic particulars, eg, title of work, page, url, full name of author}} {{w|Fletcher}}
 #*: Farewell, poor swain; thou art not for my '''bend'''.
 # In the leather trade, the best quality of [[sole]] [[leather]]; a [[butt]].
 # {{lb|en|mining}} Hard, [[indurated]] [[clay]]; [[bind]].
