--- a/en/s/she-goat.802749.wikitext
+++ b/en/s/she-goat.802749.wikitext
@@ -6,7 +6,7 @@
 ===Noun===
 {{en-noun}}
 
-# A female [[goat]].
+# A [[female]] [[goat]].
 
 ====Synonyms====
 * {{sense|female goat}} {{l|en|nanny goat}}
