--- a/en/s/SETI.26210.wikitext
+++ b/en/s/SETI.26210.wikitext
@@ -5,7 +5,7 @@
 ===Proper noun===
 {{en-proper noun}}
 
-# {{lb|en|astronomy}} {{acronym of|search for [[extraterrestrial]] Intelligence|lang=en}}
+# {{lb|en|astronomy}} {{acronym of|search for [[extraterrestrial]] intelligence|lang=en}}
 
 ====Derived terms====
 * {{l|en|OSETI}}
