--- a/en/m/micro.34067.wikitext
+++ b/en/m/micro.34067.wikitext
@@ -19,7 +19,7 @@ From {{der|en|grc|μικρός||small}}, or shortened form for modern words form
 ===Noun===
 {{en-noun}}
 
-# {{lb|en|computing|dated}} {{form of|short form|microcomputer|lang=en}}
+# {{lb|en|computing}} {{form of|short form|microcomputer|lang=en}}
 #* '''1984''', Mike Gerrard, Bryan Skinner, ''Mr Chips comes home: micros and home education'' (page 23)
 #*: If you can possibly afford to spend a few more pounds then you should move up into the next price bracket, where the potential of the home '''micro''' starts to be realised.
 #* '''1986''', Rachael Smith, ''Bomb Jack'' (video game review) in ''Your Sinclair'' issue 5, May 1986
