--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -581,6 +581,14 @@ From {{inh|ca|la|milium}}.
 
 # [[millet]]
 
+===Further reading===
+* {{R:IEC2}}
+* {{R:GDLC}}
+* {{R:DNV}}
+* {{R:DCVB}}
+
+{{c|ca|Grains}}
+
 ----
 
 ==Irish==
