--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -1,5 +1,5 @@
 ==English==
-{{wikipedia}}
+{{wikipedia|dab=bubble}}
 [[File:Reflection_in_a_soap_bubble_edit.jpg|thumb|A soap bubble.]]
 
 ===Etymology===
