--- a/en/q/quadruped.4320.wikitext
+++ b/en/q/quadruped.4320.wikitext
@@ -1,6 +1,7 @@
 ==English==
 
 ===Etymology===
+{{PIE root|en|ped}}
 Borrowed from {{bor|en|fr|quadrupède}}, from {{etyl|frm|en}}, from {{etyl|la|en}} stem of {{m|la|quadrupēs||four-footed, a four-footed animal}}, from {{m|la|quadri-||four-}} + stem of {{m|la|pes||foot}}. Alternatively analyzable as {{confix|en|quadri|alt1=quadru|ped}}.
 
 ===Pronunciation===
