--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -77,6 +77,7 @@
 ====Translations====
 {{trans-top|English of the United States}}
 * Arabic: {{t|ar|اَلْإِنْجِلِيزِيَّة اَلْأَمْرِيكِيَّة|f|tr=al-ʾingilīziyya l-ʾamrīkiyya}}
+* Catalan: {{t|ca|anglès americà|m}}, {{t|ca|anglès estatunidenc|m}}
 * Chinese:
 *: Cantonese: {{t|yue|美國英語|tr=mei gwok jīng jyu|sc=Hani}}
 *: Mandarin: {{t+|cmn|美國英語|sc=Hani}}, {{t+|cmn|美国英语|tr=Měiguó Yīngyǔ|sc=Hani}}, {{t|cmn|美式英語|sc=Hani}}, {{t|cmn|美式英语|tr=Měishì Yīngyǔ|sc=Hani}}
