--- a/en/c/crowdie.856323.wikitext
+++ b/en/c/crowdie.856323.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Etymology===
-Origin unknown.
+Alteration of Early Scots ''crud'' 'curd', cognate with Early Modern English and Middle English ''crud'', ''crudde'' (14th c.), ''crodde'' of obscure origin.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ˈkɹaʊdi/|lang=en}}
