--- a/en/-/-mancer.855704.wikitext
+++ b/en/-/-mancer.855704.wikitext
@@ -8,7 +8,7 @@
 {{en-suffix}}
 
 # A practitioner of a specific type of [[divination]].
-# A user of a specified type of [[magic]].
+# Incorrectly used as the name for a user of any specified type of [[magic]].
 
 ====Derived terms====
 {{suffixsee|en}}
