--- a/en/m/money bag.720269.wikitext
+++ b/en/m/money bag.720269.wikitext
@@ -21,6 +21,7 @@
 * Finnish: {{t|fi|rahasäkki}}
 {{trans-mid}}
 * Irish: {{t|ga|mála airgid|m}}
+* Latin: {{t|la|pasceolus|m}}
 * Maori: {{t|mi|pēke moni }}
 * Tagalog: {{t|tl|talega}}
 {{trans-bottom}}
