--- a/en/p/petrogenetic.775493.wikitext
+++ b/en/p/petrogenetic.775493.wikitext
@@ -4,7 +4,7 @@
 {{prefix|petro|genetic|lang=en}}
 
 ===Pronunciation===
-* {{a|US}} {{IPA|pɛtɹoʊdʒəˈnɛtɪk|lang=en}}
+* {{a|GA}} {{IPA|/ˌpɛtɹoʊdʒəˈnɛtɪk/|lang=en}}
 * {{rhymes|ɛtɪk|lang=en}}
 
 ===Adjective===
