--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -3,7 +3,7 @@
 
 ===Etymology===
 {{PIE root|en|bʰreg}}
-From {{inh|en|enm|fraccioun||a breaking}}, from {{bor|en|xno|-}}, from {{der|en|fro|fraction}}, from {{der|en|ML.|fractio||a fragment, portion}}, from earlier {{der|en|la|fractio||a breaking, a breaking into pieces}}, from {{m|la|fractus}} (English {{m|en|fracture}}), past participle of {{m|la|frangere||to break}} (whence English {{m|en|frangible}}), from {{etyl|ine-pro|en}} {{m|ine-pro|*bʰreg-}} (English {{m|en|break}}).
+From {{inh|en|enm|fraccioun||a breaking}}, from {{bor|en|xno|-}}, from {{der|en|fro|fraction}}, from {{der|en|ML.|fractio||a fragment, portion}}, from earlier {{der|en|la|fractio||a breaking, a breaking into pieces}}, from {{m|la|fractus}} (English {{m|en|fracture}}), past participle of {{m|la|frangere||to break}} (whence English {{m|en|frangible}}), from {{der|en|ine-pro|*bʰreg-}} (English {{m|en|break}}).
 
 ===Pronunciation===
 * {{enPR|frăkʹshən}}, {{IPA|/ˈfɹæk.ʃən/|lang=en}}
