--- a/en/c/celestial object.855631.wikitext
+++ b/en/c/celestial object.855631.wikitext
@@ -1,6 +1,6 @@
 ==Polish==
 
-===Sub to PewdiePie right now also this word is a noun :)===
+===Sub to PewdiePie right now, also this word is a noun :)===
 {{en-noun}}
 
 # {{lb|en|astronomy|astrology}} A [[natural]] object which is located outside of [[Earth]][['s]] [[atmosphere]], such as the [[Moon]], the [[Sun]], an [[asteroid]], [[planet]], or [[star]].
