--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -223,6 +223,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 * West Frisian: {{t|fy|blaze}}
 * Yiddish: {{t|yi|בלאָזן}}
 * Zazaki: {{t|zza|pıf kerden}}
+* Zealandic: {{t|zea|blaeze}}
 {{trans-bottom}}
 
 {{trans-top|to propel by an air current}} <!--2-->
