--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -247,6 +247,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Nii: {{t|nii|kung}}
 * Nivkh: {{t|niv|овӻоӈ}}
 * Norman: {{t|nrf|couochon|m}} {{qualifier|Jersey}}, {{t|nrf|bête à saie|f}} {{qualifier|Jersey}}, {{t|nrf|por|m}} {{qualifier|Jersey}}, {{t|nrf|gronneux|m}} {{qualifier|Jersey}}, {{t|nrf|moussieu|m}} {{qualifier|Jersey}}, {{t|nrf|quétot|m}} {{qualifier|Jersey}}
+* North Frisian: {{t|frr|Swin}} {{qualifier|Sylt}}
 * Norwegian: {{t+|no|svin|n}}, {{t+|no|gris|m}}
 * Novial: {{t-needed|nov}}
 * Occitan: {{t+|oc|pòrc|m}}, {{t|oc|puèrc|m}}
