--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -15,6 +15,8 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 #* {{rfdate||and other bibliographic particulars}} Sir {{w|Philip Sidney}}
 #*: The diligent pilot in a dangerous tempest doth not '''attend''' the unskilful words of the passenger.
 # {{lb|en|archaic|intransitive}} To [[listen]] ({{m|en|to}}, {{m|en|unto}}). {{defdate|from 15th c.}}
+#* {{w|Rudyard Kipling}}, ''The Beginning of the Armadillos''
+#*: 'Now '''attend''' to me,' said Painted Jaguar, 'because this is very important. {{...}}
 # {{senseid|en|to turn one's consideration to, deal with}}{{lb|en|intransitive}} To turn one's [[consideration]] ({{m|en|to}}); to [[deal]] with (a task, problem, concern etc.), to look after. {{defdate|from 15th c.}}
 #: {{ux|en|Secretaries '''attend''' to correspondence.}}
 #* {{quote-book|lang=en|year=1918| author={{w|W. B. Maxwell}}| chapter=15| title=[http://openlibrary.org/works/OL1097634W The Mirror and the Lamp]| passage=Edward Churchill still '''attended''' to his work in a hopeless mechanical manner like a sleep-walker who walks safely on a well-known round. But his Roman collar galled him, his cossack stifled him, his biretta was as uncomfortable as a merry-andrew's cap and bells.}}
