--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -44,7 +44,7 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * Armenian: {{t+|hy|օղի}}, {{qualifier|colloquial}} {{t+|hy|արաղ}}
 * Asturian: {{t|ast|vodca|m}}
 * Azerbaijani: {{t+|az|araq}}, {{t+|az|vodka}}
-* Bashkir: {{t|ba|араҡы}}, {{t|ba|водка}}
+* Bashkir: {{t|ba|араҡы}}
 * Basque: {{t|eu|vodka}}
 * Belarusian: {{t|be|гарэ́лка|f}}, {{t|be|во́дка|f}}
 * Bengali: {{t+|bn|ভদকা}}
