--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -226,12 +226,12 @@ From {{inh|nl|dum|otter}}, from {{inh|nl|odt|ottar}}, from {{inh|nl|gem-pro|*utr
 ==Middle Dutch==
 
 ===Etymology===
-From {{inh|dum|odt|ottar}}, from {{inh|dum|gem-pro|*utraz}}, from {{inh|dum|ine-pro|*udrós||water-animal, otter}}, from {{m|ine-pro|*wed-||water}}.
+From {{inh|dum|odt|*ottar}}, from {{inh|dum|gem-pro|*utraz}}, from {{inh|dum|ine-pro|*udrós||water-animal, otter}}, from {{m|ine-pro|*wed-||water}}.
 
 ===Noun===
 {{dum-noun|m}}
 
-# {{l|en|otter}}, [[European otter]]
+# {{topics|dum|Mustelids}} [[#English|otter]], [[European otter]]
 
 ====Inflection====
 {{rfinfl|dum|noun}}
@@ -243,8 +243,6 @@ From {{inh|dum|odt|ottar}}, from {{inh|dum|gem-pro|*utraz}}, from {{inh|dum|ine-
 ===Further reading===
 * {{R:VMNW|ID2485}}
 * {{R:MNW|40172}}
-
-{{topics|dum|Mustelids}}
 
 ----
 
