--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -143,7 +143,7 @@ Sense of "group of military officers that assists a commander" and similar meani
 {{trans-bottom}}
 
 {{trans-top|employees of a business}}
-* Armenian: {{t-needed|hy}}
+* Armenian: {{t+|hy|անձնակազմ}}
 * Basque: {{t-needed|eu}}
 * Catalan: {{t+|ca|staff|m}}, {{t+|ca|plantilla|f}}
 * Chinese:
@@ -192,6 +192,7 @@ Sense of "group of military officers that assists a commander" and similar meani
 {{trans-bottom}}
 
 {{trans-top|commanding officers}}
+* Armenian: {{t+|hy|շտաբ}}
 * Czech: {{t|cs|štáb|m}}
 * German: {{t+|de|Stab|m}}
 * Hebrew: {{t+|he|מטה|m|tr=maté}}
