--- a/en/l/lead time.775552.wikitext
+++ b/en/l/lead time.775552.wikitext
@@ -1,6 +1,9 @@
 ==English==
 {{wikipedia}}
 
+===Pronunciation===
+* {{audio|En-au-lead time.ogg|Audio (AU)|lang=en}}
+
 ===Noun===
 {{en-noun}}
 # {{lb|en|idiomatic}} The amount of time between the [[initiation]] of some [[process]] and its [[completion]], e.g. the time required to [[manufacture]] or [[procure]] a product; the time required before something can be [[provided]] or [[delivered]].
