--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -37,7 +37,7 @@ Abbreviation of various terms and phrases.
 #* '''1978''', {{w|Kingsley Amis}}, ''Jake's Thing'', Vintage 2007, p. 8:
 #*: Jake lengthened his stride and crossed the road in front of a double-parked car, large, black and with '''CD''' plates.
 # [[compact disc|Compact disc]]; a form of digital media that is based on the use of a laser to read from a plastic disc in a reader device.
-# [[certificate of deposit|Certificate of deposit]] {{qualifier|from a financial institutions}}.
+# [[certificate of deposit|Certificate of deposit]] {{qualifier|from a financial institution}}.
 # [[creative director|Creative director]]: head of the creative department (for example of an advertising agency).
 # [[corporate design|Corporate design]]: specific design features of a company, corporate identity [[CI]]. {{rfc-sense|en}}
 # [[collision detection|Collision detection]] {{qualifier|used by an Ethernet network to detect when two computers are sending frames at the same time, and also to deal with such collisions when they happen}}.
