--- a/en/c/countdown.34096.wikitext
+++ b/en/c/countdown.34096.wikitext
@@ -23,7 +23,7 @@ From {{compound|en|count|down}}.
 {{trans-top|a count backward to the time of some event}}
 * Bulgarian: {{t|bg|отброяване|n|tr=otbrojavane}}
 * Chinese:
-*: Mandarin: {{t+|cmn|倒數|sc=Hani}}, {{t+|cmn|倒数|tr=dàoshǔ|sc=Hani}}
+*: Mandarin: {{t+|cmn|倒數|sc=Hani}}, {{t+|cmn|倒数|tr=dàoshǔ|sc=Hani}}, {{t+|cmn|倒計時}}
 * Czech: {{t|cs|odpočítávání|n}}
 * Dutch: {{t+|nl|aftelling|f}}, {{t+|nl|aftellen|n}}
 * Finnish: {{t+|fi|lähtölaskenta}}
